adds final slides

--- a/slides/tex-files/people.tex
+++ b/slides/tex-files/people.tex
@@ -7,8 +7,7 @@
 {
 %\paper{}
 
-
-\begin{frame}{Olivia Guest}
+\begin{frame}{Olivia Guest (pro-\#openscience)}
     \begin{figure}
         %\centering
         \includegraphicscopyright[width=0.95\linewidth]
@@ -29,7 +28,7 @@
 %\paper{}
 
 
-\begin{frame}{Severin Lemaignan} 
+\begin{frame}{Severin Lemaignan (Open-source Enthusiast) } 
     \begin{figure}
         %\centering
         \includegraphicscopyright[width=0.95\linewidth]
@@ -51,7 +50,7 @@
 {
 %\paper{}
 
-\begin{frame}{Other OA figures} 
+\begin{frame}{Who to follow? What to read and to heard? } 
     \begin{figure}
         %\centering
         \includegraphicscopyright[width=0.95\linewidth]
