--- a/slides/tex-files/takeaways.tex
+++ b/slides/tex-files/takeaways.tex
@@ -1,19 +1,20 @@
 \section{Takeaways}
 
 
+
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
-\paper{Ainsworth 2019, https://doi.org/10.6084/m9.figshare.11762121}
+\paper{Peng 2011 in {\bf Science} DOI: 10.1126/science.1213847}
 
-\begin{frame}{Takeaways}
- 
-\begin{enumerate}
-\item Make your work available in a stable, version-controlled repository
-\item Choose an open source license to allow adoption and reuse
-\item Include instructions and examples of how to cite your software in its
-\end{enumerate}
+\begin{frame}{My journey in OA according to the Reproducibility Spectrum}
 
+    \begin{figure}
+        %\centering
+        \includegraphicscopyright[width=0.99\linewidth]
+	{peng2011/drawing}{}
+	%\caption{(A) Normalised, (B) \textt{sgolay(p=5,n=25)}, and (C) \textt{sgolay(p=5,n=159)} } 
+   \end{figure}
 	
 \end{frame}
 }
@@ -25,15 +26,22 @@
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
+%\paper{Ainsworth 2019, https://doi.org/10.6084/m9.figshare.11762121}
+{
 \paper{Gema Bueno de la Fuente  (2019), https://www.fosteropenscience.eu/node/1420}
 
-\begin{frame}{}
+\begin{frame}{Takeaways}
  
-\large 
-Pushing the frontiers of knowledge is indeed a great challenge 
-but no less important than making such knowledge 
-open accessible and reproducible.	
+\begin{enumerate}
+\item How to start?: Reproduce a paper following ReScience
+\item Use free and open source software as much as you can
+	(happy to help!)
+\item Follow, read, replicate, learn, fail, share 
+	and never stop exploring
+	the exciting world of open access science!  
+\end{enumerate}
 
+	
     \begin{figure}
         %\centering
         \includegraphicscopyright[width=0.6\linewidth]
@@ -48,25 +56,34 @@ open accessible and reproducible.
 
 
 
-
-\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-{
-\paper{Peng 2011 in {\bf Science} DOI: 10.1126/science.1213847}
-
-\begin{frame}{Reproducibility Spectrum}
-    \begin{figure}
-        %\centering
-        \includegraphicscopyright[width=0.99\linewidth]
-	{peng2011/src/fig01}{}
-	
-	%\caption{(A) Normalised, (B) \textt{sgolay(p=5,n=25)}, and (C) \textt{sgolay(p=5,n=159)} } 
-   \end{figure}
-	
-\end{frame}
-}
-
-
+%
+%
+%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%{
+%\paper{Gema Bueno de la Fuente  (2019), https://www.fosteropenscience.eu/node/1420}
+%
+%\begin{frame}{}
+% 
+%\large 
+%Pushing the frontiers of knowledge is indeed a great challenge 
+%but no less important than making such knowledge 
+%open accessible and reproducible.	
+%
+%    \begin{figure}
+%        %\centering
+%        \includegraphicscopyright[width=0.6\linewidth]
+%	{conclusions/src/OpenScienceBuildingBlocks}{}	
+%	%\caption{ } 
+%   \end{figure}
+%	
+%
+%
+%\end{frame}
+%}
+%
+%
+%
 
 
 
