--- a/slides/tex-files/thesis.tex
+++ b/slides/tex-files/thesis.tex
@@ -26,7 +26,7 @@
 {
 \paper{Xochicale 2019, https://github.com/mxochicale-phd/thesis}
 
-\begin{frame}{Figures embedded with code}
+\begin{frame}{Embedded code in Figures}
  
     \begin{figure}
         %\centering
@@ -48,7 +48,7 @@
 {
 \paper{Xochicale 2019, https://github.com/mxochicale-phd/thesis}
 
-\begin{frame}{More}
+\begin{frame}{More with GitHub}
  
     \begin{figure}
         %\centering
