--- a/slides/tex-files/introduction.tex
+++ b/slides/tex-files/introduction.tex
@@ -6,7 +6,7 @@
 %\paper{}
 
 \begin{frame}{My journey as ...}
-... open-source enthusiast and open-access scientist
+... open-source enthusiast and open-access scientist:
  
 \begin{itemize}	
 	\item 
@@ -14,11 +14,11 @@
 	Arduino is an open-source hardware and software company
 	\item \textbf{(2013-2014)} 
 	Research Assistant in Robotics at INAOE \\
-	Discovered R and github [github.com/jwf-zz/tdetools]
+	Discovered R and GitHub [github.com/jwf-zz/tdetools]
 	\item \textbf{(2014-2019)} 
 	PhD student in Robotics at Uni of Bham \\
 		Open-access scientist [twitter.com/o\_guest] \\
-		and 
+		\&
 		open-source enthusiast [github.com/severin-lemaignan] 
 	\item \textbf{(2019-present)} 
 	Research Associate in Ultrasound-Guidance 
