--- a/slides/tex-files/people.tex
+++ b/slides/tex-files/people.tex
@@ -28,7 +28,7 @@
 %\paper{}
 
 
-\begin{frame}{Severin Lemaignan (Open-source Enthusiast) } 
+\begin{frame}{Severin Lemaignan (open-source enthusiast) } 
     \begin{figure}
         %\centering
         \includegraphicscopyright[width=0.95\linewidth]
@@ -50,7 +50,7 @@
 {
 %\paper{}
 
-\begin{frame}{Who to follow? What to read and to heard? } 
+\begin{frame}{Who to follow?, What to read? \& what to heard? } 
     \begin{figure}
         %\centering
         \includegraphicscopyright[width=0.95\linewidth]
@@ -63,51 +63,3 @@
 }
 
 
-
-
-%MORE PEOPLE TO ADD 
-
-%https://github.com/brembs
-%http://brembs.net/
-%https://twitter.com/brembs
-
-% https://twitter.com/LoganCorina I won’t be #BulliedIntoBadScience
-% https://twitter.com/dirnagl
-
-%
-%https://twitter.com/NPRougier
-%https://twitter.com/OpenScienceMOOC
-%https://twitter.com/IGDOREinstitute
-%https://twitter.com/rmwillen
-%
-%https://twitter.com/talyarkoni
-%https://www.talyarkoni.org/blog/2016/12/12/why-i-still-wont-review-for-or-publish-with-elsevier-and-think-you-shouldnt-either/
-
-
-%https://twitter.com/stepheneglen
-% https://twitter.com/HeidiBaya/status/1229328284619546624
-
-
-
-%https://blogs.scientificamerican.com/observations/open-software-means-kinder-science/
-%https://www.openscapes.org
-%https://twitter.com/openscapes
-%https://twitter.com/openscapes
-%https://github.com/jules32
-
-
-
-%
-%PODCAST
-%https://twitter.com/SciForProgress
-%https://soundcloud.com/opensciencetalk
-
-
-
-%OA
-%https://twitter.com/_open_science_
-%
-%JOURNALS
-%https://twitter.com/ReScienceEds
-%
-%
