--- a/slides/tex-files/takeaways.tex
+++ b/slides/tex-files/takeaways.tex
@@ -33,18 +33,20 @@
 \begin{frame}{Takeaways}
  
 \begin{enumerate}
-\item How to start?: Reproduce a paper following ReScience
-\item Use free and open source software as much as you can
-	(happy to help!)
-\item Follow, read, replicate, learn, fail, share 
-	and never stop exploring
+\item Learn from other open access scientists and open source enthusiasts 
+	(there are quite amazing human beings in Twitter and GitHub)
+\item Use, perhaps also contribute to, free and open source 
+	software as much as you can (happy to help!)
+\item How to start?: Reproduce a paper in ReScience
+\item Read, replicate, learn, fail, share 
+	and do not stop exploring
 	the exciting world of open access science!  
 \end{enumerate}
 
 	
     \begin{figure}
         %\centering
-        \includegraphicscopyright[width=0.6\linewidth]
+        \includegraphicscopyright[width=0.5\linewidth]
 	{conclusions/src/OpenScienceBuildingBlocks}{}	
 	%\caption{ } 
    \end{figure}
