--- a/slides/tex-files/tools.tex
+++ b/slides/tex-files/tools.tex
@@ -13,7 +13,7 @@ to run, copy, distribute, study, change and improve the software
 
     \begin{figure}
         %\centering
-        \includegraphicscopyright[width=0.7\linewidth]
+        \includegraphicscopyright[width=0.95\linewidth]
 	{foss/src/charac-more}{}
 	%\caption{ } 
    \end{figure}
@@ -79,10 +79,11 @@ to run, copy, distribute, study, change and improve the software
 
 \begin{frame}{}
  
-\LARGE 
+\Large 
+\textit{ 
 The tools we use have profound (and devious!) influence on our 
-thinking habits, and therefore, on our thinking abilities.
-	
+thinking habits, and therefore, on our thinking abilities.}
+
 \end{frame}
 }
 
