amends aspectradio to 16-9 and polishes slides

--- a/slides/tex-files/introduction.tex
+++ b/slides/tex-files/introduction.tex
@@ -5,27 +5,32 @@
 {
 %\paper{}
 
-\begin{frame}{My journey as ...}
-... open-source enthusiast and open-access scientist:
- 
+\begin{frame}{My journey as a open-source enthusiast and open-access scientist}
+
 \begin{itemize}	
 	\item 
 	\textbf{(2004-2006)} MSc in Signal Processing \\
-	Arduino is an open-source hardware and software company
+	Installed Open Suse and bought my first Arduino
+	\item \textbf{(2006-2012)} Teaching Associate in Mechatronics \\
+	Using OpenSuse, Arduino, LaTeX, and Free Software tools.
 	\item \textbf{(2013-2014)} 
 	Research Assistant in Robotics at INAOE \\
-	Discovered R and GitHub [github.com/jwf-zz/tdetools]
+	Discovered R and GitHub [\faGithub @jwf-zz/tdetools]
 	\item \textbf{(2014-2019)} 
 	PhD student in Robotics at Uni of Bham \\
-		Open-access scientist [twitter.com/o\_guest] \\
+		Role models: open-access scientist [ \faTwitter @o\_guest] \\
 		\&
-		open-source enthusiast [github.com/severin-lemaignan] 
+		open-source enthusiast [\faGithub @severin-lemaignan] 
 	\item \textbf{(2019-present)} 
 	Research Associate in Ultrasound-Guidance 
 	Intervention at KCL \\
-		Continuously-integrated Open-source Reproducible TeX
-	[github.com/rodluger/corTeX]
+		Continuously-integrated Open-source Reproducible TeX [\faGithub @rodluger/corTeX]
 \end{itemize}
+
+	\vspace{-2mm}
+        \includegraphicscopyright[width=0.99\linewidth]
+	{myjourney/drawing}{}
+	
 
 	
 \end{frame}
