--- a/slides/tex-files/takeaways.tex
+++ b/slides/tex-files/takeaways.tex
@@ -11,7 +11,7 @@
 
     \begin{figure}
         %\centering
-        \includegraphicscopyright[width=0.99\linewidth]
+        \includegraphicscopyright[width=0.95\linewidth]
 	{peng2011/drawing}{}
 	%\caption{(A) Normalised, (B) \textt{sgolay(p=5,n=25)}, and (C) \textt{sgolay(p=5,n=159)} } 
    \end{figure}
@@ -28,68 +28,53 @@
 {
 %\paper{Ainsworth 2019, https://doi.org/10.6084/m9.figshare.11762121}
 {
-\paper{Gema Bueno de la Fuente  (2019), https://www.fosteropenscience.eu/node/1420}
+\paper{Open Science Logo (2020), https://github.com/jcolomb/opensciencelogo}
 
 \begin{frame}{Takeaways}
+
+
+\begin{columns}
+
+
+
+\begin{column}{0.6\textwidth}
+
+
  
 \begin{enumerate}
 \item Learn from other open access scientists and open source enthusiasts 
-	(there are quite amazing human beings in Twitter and GitHub)
-\item Use, perhaps also contribute to, free and open source 
-	software as much as you can (happy to help!)
-\item How to start?: Reproduce a paper in ReScience
+	(there are quite amazing human beings in \faTwitter and \faGithub)
+\item 	Make use of free and open source 
+	software and hardware as much as you can, and
+	 perhaps also contribute to it. (happy to help!)
 \item Read, replicate, learn, fail, share 
 	and do not stop exploring
 	the exciting world of open access science!  
 \end{enumerate}
+\end{column}
 
-	
+
+
+
+\begin{column}{0.4\textwidth} 
     \begin{figure}
         %\centering
-        \includegraphicscopyright[width=0.5\linewidth]
-	{conclusions/src/OpenScienceBuildingBlocks}{}	
+        \includegraphicscopyright[width=0.8\linewidth]
+	{open-science-logo-flower/drawing}{}	
 	%\caption{ } 
    \end{figure}
 	
+\end{column}
+
+
+
+\end{columns}
+
+
 
 
 \end{frame}
 }
 
-
-
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Gema Bueno de la Fuente  (2019), https://www.fosteropenscience.eu/node/1420}
-%
-%\begin{frame}{}
-% 
-%\large 
-%Pushing the frontiers of knowledge is indeed a great challenge 
-%but no less important than making such knowledge 
-%open accessible and reproducible.	
-%
-%    \begin{figure}
-%        %\centering
-%        \includegraphicscopyright[width=0.6\linewidth]
-%	{conclusions/src/OpenScienceBuildingBlocks}{}	
-%	%\caption{ } 
-%   \end{figure}
-%	
-%
-%
-%\end{frame}
-%}
-%
-%
-%
-
-
-
-
-% https://www.researchgate.net/publication/337935267_Open_science_Leaving_no_one_behind
 
 
