--- a/slides/tex-files/tools.tex
+++ b/slides/tex-files/tools.tex
@@ -14,7 +14,7 @@ to run, copy, distribute, study, change and improve the software
     \begin{figure}
         %\centering
         \includegraphicscopyright[width=0.95\linewidth]
-	{foss/src/charac-more}{}
+	{foss/free-software-gang}{}
 	%\caption{ } 
    \end{figure}
 	
@@ -37,7 +37,7 @@ to run, copy, distribute, study, change and improve the software
 
     \begin{figure}
         %\centering
-        \includegraphicscopyright[width=0.7\linewidth]
+        \includegraphicscopyright[width=0.6\linewidth]
 	{foss/src/foss_logos}{}
 	%\caption{ } 
    \end{figure}
@@ -58,7 +58,7 @@ to run, copy, distribute, study, change and improve the software
 
     \begin{figure}
         %\centering
-        \includegraphicscopyright[width=0.95\linewidth]
+        \includegraphicscopyright[width=0.70\linewidth]
 	{mytools/drawing.pdf}{}
 	%\caption{ } 
    \end{figure}
@@ -79,7 +79,7 @@ to run, copy, distribute, study, change and improve the software
 
 \begin{frame}{}
  
-\Large 
+\LARGE 
 \textit{ 
 The tools we use have profound (and devious!) influence on our 
 thinking habits, and therefore, on our thinking abilities.}
